# vois

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Notice.txt  README.md  README_full.md  pyproject.toml  test.py
deploy/vois/: colors.py  download.py  eucountries.py  geojsonUtils.py  interMap.py  ipytrees.py  leafletMap.py  svgBarChart.py  svgBubblesChart.py  svgGraph.py  svgHeatmap.py  svgMap.py  svgPackedCirclesChart.py  svgRankChart.py  svgUtils.py  treemapPlotly.py  urlOpen.py  urlUpdate.py
deploy/vois/vuetify/: app.py  basemaps.py  button.py  card.py  cardsGrid.py  colorPicker.py  datatable.py  datePicker.py  dayCalendar.py  dialogGeneric.py  dialogMessage.py  dialogWait.py  dialogYesNo.py  fab.py  fontsettings.py  footer.py  iconButton.py  label.py  layers.py  mainPage.py  menu.py  multiSwitch.py  opacity.py  page.py  paletteEditor.py  palettePicker.py  palettePickerEx.py  popup.py  (+22 more)
development/: Proposta.ipynb  deprecationClass.py  load_local_vois.py  prova.ipynb  prova.py
docs/: .gitignore  1_intro.rst  2_tutorial.rst  3.1_referenceGeneral.rst  3.2_referenceVuetify.rst  3.3_referenceGeo.rst  3_reference.rst  4_help.rst  5_vaas.rst.old  6_license.rst  7_tables.rst  UsefulLinks.txt  conf.py  index.rst
docs/_static/: EnergyConsumption.1.html  EnergyConsumption.2.html  EnergyConsumption.3.html  EnergyConsumption.4.html  EnergyConsumption.5.html  EnergyConsumption.6.html  EnergyConsumption.7.html  EnergyConsumption.8.html  EnergyConsumption.9.html  EnergyConsumption.Final.ThemeDark.html  EnergyConsumption.Final.html  MultiPageDemo.html  Notice.txt
examples/: Iris.ipynb  test.ipynb
examples/EnergyConsumption/: EnergyConsumption.1.ipynb  EnergyConsumption.2.ipynb  EnergyConsumption.3.ipynb  EnergyConsumption.4.ipynb  EnergyConsumption.5.ipynb  EnergyConsumption.6.ipynb  EnergyConsumption.7.ipynb  EnergyConsumption.8.ipynb  EnergyConsumption.9.ipynb  EnergyConsumption.Final.ThemeDark.ipynb  EnergyConsumption.Final.ipynb  EnergyConsumption.py  EnergyConsumptionSteps.txt  VuetifyTestApp.ipynb  VuetifyTestMap.ipynb  ten00124_linear.csv  tps00001_tabular.tsv
examples/MultiPage/: MultiPageDemo.ipynb
examples/notebooks/: colors.ipynb  cssUtils.ipynb  download.ipynb  eucountries.ipynb  geojsonUtils.ipynb  interMap.ipynb  ipytrees.ipynb  leafletMap.ipynb  svgBarChartTest.ipynb  svgBubblesChart.ipynb  svgGraph.ipynb  svgHeatmap.ipynb  svgMap.ipynb  svgUtils.ipynb  textpopup.ipynb  treemapPlotly.ipynb  urlOpen.ipynb  urlUpdate.ipynb
logo/: vois.pspimage  vois_horizontal.pspimage
scripts/: copyto  deploy
src/: eucountriesTest.ipynb  svgGraphTest.ipynb  svgHeatmap.py  svgHeatmapTest.ipynb  svgRankChartTest.ipynb
src/vois/: Utilities.ipynb  colors.py  colorsTest.ipynb  cssUtils.py  cssUtilsTest.ipynb  download.py  downloadTest.ipynb  geojsonUtilsTest.ipynb  interMapTest.ipynb  leafletMapTest.ipynb  svgBarChart.py  svgBarChartTest.ipynb  svgHeatmapTest.ipynb  svgMap.py  svgMapTest.ipynb  svgPackedCirclesChartTest.ipynb  svgRankChartTest.ipynb  svgUtils.py  svgUtilsTest.ipynb  textpopup.py  textpopupTest.ipynb  urlUpdateTest.ipynb
src/vuetify/: app.py  datePickerTest.ipynb  dialogGeneric.py  dialogMessageTest.ipynb  dialogYesNoTest.ipynb  labelTest.ipynb  layers.py  palettePickerEx.py  sliderFloat.py
tests/: Tests.ipynb  conftest.py  tests_dev.ipynb
tests/ui/: info.md  test_Button.py  test_ColorPicker.py  test_DatePicker.py  test_DayCalendar.py  test_Label.py  test_MultiSwitch.py  test_Progress.py  test_Radio.py  test_RangeSlider.py  test_Slider.py  test_SliderFloat.py  test_Switch.py  test_Tabs.py  test_TextList.py  test_Toggle.py
training/: links.txt
training/EUlearn/: Announcement.docx  AnnouncementShort.docx  JRC ONLINE Voilà dashboarding in the JRC Big Data 24-11-2022.xlsx
training/Module 2/: 1. Introduction to widgets.ipynb  2. Output widgets usage.ipynb  3. Output dimensioning.ipynb  4. Output styling.ipynb  5. Manage events on widgets.ipynb  Exercise1.ipynb
training/Module 3/: 1. General package of voilalibrary.ipynb  2. Vuetify package of voilalibrary.ipynb  3. ipyvuetify basic usage.ipynb  4. ipyvuetify template usage.ipynb  5. ipyvuetify Html widget.ipynb  Exercise2.ipynb
training/Module 4/: Display CSV as table and chart.ipynb  Display Treemap on JRC data.ipynb
training/Module 5/: Covid.ipynb
training/Module 6/: 1. First steps with SVG.ipynb  2. Animations in SVG.ipynb  3. Events in SVG.ipynb
training/Module 7/: 1. Vector Data display.ipynb  2. Raster Data display.ipynb
training/Module 9/: 1. CSS units for responsive apps.ipynb  2. Voilalibrary non responsive app.ipynb  3. Voilalibrary responsive app.ipynb  4. app with responsive panels.ipynb  5. Mushrooms.ipynb  6. Multivariate.ipynb  7. Astronomy.ipynb  Links.txt
training/Presentation/: VoilàTraining_24November2022.pptx
vois/: VuetifyTest.ipynb  colors.py  colorsTest.ipynb  downloadTest.ipynb  eucountries.py  eucountriesTest.ipynb  geojsonUtilsTest.ipynb  interMap.py  interMapTest.ipynb  ipytreesTest.ipynb  leafletMap.py  svgBubblesChart.py  svgBubblesChartTest.ipynb  svgGraph.py  svgHeatmapTest.ipynb  svgMap.py  svgMapTest.ipynb  svgPackedCirclesChartTest.ipynb  svgRankChart.py  svgRankChartTest.ipynb  svgUtils.py  svgUtilsTest.ipynb  treemapPlotlyTest.ipynb  urlOpenTest.ipynb  urlUpdateTest.ipynb
vois/data/: ItalyProvinces.geojson
vois/vuetify/: app.py  appExample1.ipynb  appExample2.ipynb  appExample3.ipynb  appExample4.ipynb  appTest.ipynb  appTestFullscreen.ipynb  basemaps.py  basemapsTest.ipynb  button.py  buttonTest.ipynb  card.py  cardTest.ipynb  cardsGridTest.ipynb  colorPickerTest.ipynb  datatable.py  datatableTest.ipynb  datePicker.py  dialogGeneric.py  dialogGenericTest.ipynb  dialogMessage.py  dialogMessageTest.ipynb  dialogWait.py  dialogWaitTest.ipynb  dialogYesNo.py  dialogYesNoTest.ipynb  fabTest.ipynb  fontsettings.py  footer.py  footerTest.ipynb  label.py  labelTest.ipynb  layers.py  layersTest.ipynb  mainPage.py  mainPageTest.ipynb  menu.py  menuTest.ipynb  multiSwitchTest.ipynb  opacityTest.ipynb  (+48 more)
(+250 files in other folders)
